first segue added from LoginVC to MusicListVC

--- a/SwappingScreensDEV/Base.lproj/Main.storyboard
+++ b/SwappingScreensDEV/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,70 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X5t-Bu-L7a">
+                                <rect key="frame" x="103" y="71" width="169" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="169" id="6gO-yN-Os3"/>
+                                    <constraint firstAttribute="height" constant="30" id="xS1-iP-PzV"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="61N-Jr-E6N">
+                                <rect key="frame" x="103" y="122" width="169" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="169" id="FQ3-Ob-UZg"/>
+                                    <constraint firstAttribute="height" constant="30" id="n0L-EW-aBv"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4rS-4T-58G">
+                                <rect key="frame" x="134" y="206" width="107" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3uW-bW-vc0"/>
+                                    <constraint firstAttribute="width" constant="107" id="9wc-Z0-rXQ"/>
+                                </constraints>
+                                <state key="normal" title="Login Now"/>
+                                <connections>
+                                    <segue destination="lKd-5v-0wU" kind="show" id="vWl-LT-uT1"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="X5t-Bu-L7a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BrN-DL-mvg"/>
+                            <constraint firstItem="X5t-Bu-L7a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="51" id="MMa-Ve-hNc"/>
+                            <constraint firstItem="4rS-4T-58G" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bDR-td-EPB"/>
+                            <constraint firstItem="4rS-4T-58G" firstAttribute="top" secondItem="61N-Jr-E6N" secondAttribute="bottom" constant="54" id="n2f-2g-qsS"/>
+                            <constraint firstItem="61N-Jr-E6N" firstAttribute="top" secondItem="X5t-Bu-L7a" secondAttribute="bottom" constant="21" id="qr8-0A-M9z"/>
+                            <constraint firstItem="61N-Jr-E6N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wUf-Gm-UXF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-446" y="96"/>
+        </scene>
+        <!--Music ListVC-->
+        <scene sceneID="ZOa-Yd-ilY">
+            <objects>
+                <viewController id="lKd-5v-0wU" customClass="MusicListVC" customModule="SwappingScreensDEV" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Oc1-WZ-uw1"/>
+                        <viewControllerLayoutGuide type="bottom" id="aFI-LB-39g"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J1L-Ri-ZUL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t48-5E-Jzc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="518" y="127"/>
         </scene>
     </scenes>
 </document>
